Bug 293287 - Clear a Mask doesn't refresh Canvas display
Summary: Clear a Mask doesn't refresh Canvas display
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-04 12:46 UTC by animtim
Modified: 2012-02-04 16:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2012-02-04 12:46:37 UTC
Version:           svn trunk (using KDE 4.8.0) 
OS:                Linux

Doing menu entry "Clear" on a mask (transparency or filter) doesn't refresh the canvas. You need to toggle off/on the mask (for transparency mask) or the parent layer (for filter mask) to see the mask cleared on canvas.

Reproducible: Always

Steps to Reproduce:
-Create a mask (transparency or filter, for instance invert filter is easy to spot the result) on a layer with something painted.
-select the mask and do edit->clear

Actual Results:  
You see no change on the canvas, until you toggle off/on the parent layer (for filter masks) or the mask itself (for transparency mask)

Expected Results:  
Canvas should be updated directly.
Comment 1 Dmitry Kazakov 2012-02-04 16:08:22 UTC
Git commit 594a48b9698e4561ae64ac12c95dbd04a6ef4de9 by Dmitry Kazakov.
Committed on 04/02/2012 at 18:07.
Pushed by dkazakov into branch 'shapes-as-node-model-kazakov'.

Fixed updates on selection-based nodes

The paint devices of these nodes should have a link to parent
nodes to be able to emit setDirty() signals

M  +6    -2    krita/image/kis_mask.cc
M  +6    -0    krita/image/kis_paint_device.cc
M  +4    -0    krita/image/kis_paint_device.h
M  +30   -0    krita/image/kis_selection.cc
M  +14   -0    krita/image/kis_selection.h
M  +2    -0    krita/image/kis_selection_based_layer.cpp
M  +36   -0    krita/image/tests/kis_adjustment_layer_test.cpp
M  +1    -0    krita/image/tests/kis_adjustment_layer_test.h
M  +28   -1    krita/image/tests/kis_mask_test.cpp
M  +1    -0    krita/image/tests/kis_mask_test.h
M  +42   -0    krita/image/tests/kis_selection_test.cpp
M  +2    -0    krita/image/tests/kis_selection_test.h

http://commits.kde.org/calligra/594a48b9698e4561ae64ac12c95dbd04a6ef4de9