Fixed updates on selection-based nodes

The paint devices of these nodes should have a link to parent
nodes to be able to emit setDirty() signals

BUG:293287