krita/image/kis_mask.cc
@@ -76,8 +76,10 @@ KisMask::KisMask(const KisMask& rhs)
 {
     setName(rhs.name());
 
-    if (rhs.m_d->selection)
+    if (rhs.m_d->selection) {
         m_d->selection = new KisSelection(*rhs.m_d->selection.data());
+        m_d->selection->setParentNode(this);
+    }
 }
 
 KisMask::~KisMask()
@@ -127,6 +129,7 @@ void KisMask::initSelection(KisSelectionSP copyFrom, KisLayerSP parentLayer)
         quint8 newDefaultPixel = MAX_SELECTED;
         m_d->selection->getOrCreatePixelSelection()->setDefaultPixel(&newDefaultPixel);
     }
+    m_d->selection->setParentNode(this);
     m_d->selection->updateProjection();
 }
 
@@ -154,7 +157,7 @@ KisSelectionSP KisMask::selection() const
         }
         m_d->selection->updateProjection();
     }
-
+    m_d->selection->setParentNode(const_cast<KisMask*>(this));
     return m_d->selection;
 }
 
@@ -170,6 +173,7 @@ void KisMask::setSelection(KisSelectionSP selection)
         const KisLayer *parentLayer = qobject_cast<const KisLayer*>(parent());
         m_d->selection->setDefaultBounds(new KisDefaultBounds(parentLayer->image()));
     }
+    m_d->selection->setParentNode(this);
 }
 
 void KisMask::select(const QRect & rc, quint8 selectedness)
