krita/image/kis_selection.h
@@ -81,6 +81,14 @@ public:
      */
     virtual ~KisSelection();
 
+    /**
+     * The paint device of the pixel selection should report
+     * about it's setDirty events to its parent. The creator
+     * should set the parent manually if he wants to get the
+     * signals
+     */
+    void setParentNode(KisNodeWSP node);
+
     bool hasPixelSelection() const;
     bool hasShapeSelection() const;
 
@@ -150,6 +158,12 @@ public:
 
     KDE_DEPRECATED quint8 selected(qint32 x, qint32 y) const;
     KDE_DEPRECATED void setDirty(const QRect &rc = QRect());
+
+private:
+    friend class KisSelectionTest;
+    friend class KisMaskTest;
+    friend class KisAdjustmentLayerTest;
+    KisNodeWSP parentNode() const;
 
 private:
 
